docs: Add comprehensive README with features, screenshots, and installation guide