@@ -1,228 +1,238 @@
-# 🌱 Flora Fight Frenzy
+# 🌻 Flora Fight Frenzy - Plants vs Zombies Clone 🧟
 
-[![Deploy](https://github.com/Flamechargerr/flora-fight-frenzy/actions/workflows/deploy.yml/badge.svg)](https://github.com/Flamechargerr/flora-fight-frenzy/actions/workflows/deploy.yml)
-[![Live Demo](https://img.shields.io/badge/Live-Demo-green?style=flat&logo=github)](https://flamechargerr.github.io/flora-fight-frenzy/)
+<div align="center">
 
-A modern tower defense game where you defend your garden from zombie invasion using strategic plant placement. Built with React, TypeScript, and enhanced with immersive audio effects and particle systems.
+![Plants vs Zombies Banner](screenshots/Arena.png)
 
-## 🎮 Play Now
+**A fully-featured Plants vs Zombies clone built in Java/JavaFX**
 
-**[🚀 Play Flora Fight Frenzy](https://flamechargerr.github.io/flora-fight-frenzy/)**
+[![Made by Anamay](https://img.shields.io/badge/Made%20by-Anamay%20(Flamechargerr)-green)](https://github.com/Flamechargerr)
+[![Java](https://img.shields.io/badge/Java-17+-orange)](https://adoptium.net/)
+[![JavaFX](https://img.shields.io/badge/JavaFX-17+-blue)](https://openjfx.io/)
+[![License](https://img.shields.io/badge/License-GPL%20v3-blue)](LICENSE)
+
+[Features](#-features) • [Screenshots](#-screenshots) • [Installation](#-installation) • [How to Play](#-how-to-play) • [Credits](#-credits)
+
+</div>
+
+---
+
+## 👨‍💻 About
+
+**Flora Fight Frenzy** is a complete recreation of the classic tower defense game "Plants vs Zombies". Built using Java and JavaFX, this game features smooth animations, sound effects, save/load functionality, and 5 challenging levels.
+
+### Built by
+**Anamay (Flamechargerr)** - [GitHub](https://github.com/Flamechargerr)
+
+---
 
 ## ✨ Features
 
-### 🎯 Core Gameplay
-- **5 Challenging Levels**: Progressive difficulty with unique zombie types
-- **Strategic Plant Placement**: 10+ different plant types with unique abilities
-- **Wave-Based Combat**: Survive increasingly difficult zombie waves
-- **Resource Management**: Collect sunlight to fund your defenses
+### 🎮 Gameplay
+- **5 Challenging Levels** - Progressive difficulty with more zombies
+- **Day & Night Modes** - Different themes affect sun spawning
+- **Save & Load** - Save your progress and continue later
+- **Multiple Game States** - Win screen, lose screen, pause menu
 
-### 🎨 Enhanced Experience  
-- **Immersive Audio**: Procedurally generated sound effects using Web Audio API
-- **Particle Effects**: Dynamic visual feedback for all game interactions
-- **Achievement System**: 15+ achievements across 5 categories
-- **Responsive Design**: Optimized for desktop and mobile devices
-- **Smooth Animations**: 60fps gameplay with CSS3 and JavaScript animations
+### 🌱 Plants Available
+| Plant | Cost | Description |
+|-------|------|-------------|
+| 🌻 **Sunflower** | 50 | Produces sun for planting |
+| 🌱 **Pea Shooter** | 100 | Shoots peas at zombies |
+| 🥜 **Wall-nut** | 50 | High health defensive barrier |
+| 🍒 **Cherry Bomb** | 150 | Explodes and kills nearby zombies |
+| 🌱🌱 **Repeater** | 200 | Shoots two peas at once |
+| 🌶️ **Jalapeno** | 125 | Burns entire row of zombies |
 
-### 🏆 Game Systems
-- **Achievement Tracking**: Combat, Defense, Survival, Collection, and Special achievements
-- **Statistics Dashboard**: Track your progress and performance
-- **Progress Persistence**: Your achievements and stats are saved locally
-- **Multiple Difficulty Modes**: From casual garden defense to intense survival
+### 🧟 Zombies
+| Zombie | Health | Speed |
+|--------|--------|-------|
+| 🧟 **Normal Zombie** | Low | Normal |
+| 🧟‍♂️ **Conehead Zombie** | Medium | Normal |
+| 🧟‍♀️ **Buckethead Zombie** | High | Slow |
 
-## 🛠️ Technologies Used
+### 🛠️ Tools
+- **Shovel** - Remove plants from the lawn
+- **Almanac** - View details about plants and zombies
+- **Progress Bar** - Track level completion
 
-### Frontend Stack
-- **React 18.3** - Modern UI library with hooks
-- **TypeScript 5.5** - Type-safe development
-- **Vite 5.4** - Lightning-fast build tool
-- **Tailwind CSS 3.4** - Utility-first CSS framework
-- **shadcn/ui** - Beautiful, accessible components
+### 🔊 Sound Effects
+- Background music
+- Planting sounds
+- Zombie groans
+- Explosion effects
+- Victory/Defeat sounds
 
-### Game Engine
-- **Custom React Game Loop** - 60fps game state management
-- **Web Audio API** - Procedural sound generation
-- **Canvas2D** - Particle effects and animations
-- **Local Storage** - Save system and achievements
+---
 
-### Deployment
-- **GitHub Actions** - Automated CI/CD
-- **GitHub Pages** - Static site hosting
-- **PWA Ready** - Offline capability support
+## 📸 Screenshots
 
-## 🚀 Quick Start
+<div align="center">
+
+### Main Menu
+![Main Menu](screenshots/1.png)
+
+### Gameplay - Day Mode
+![Gameplay Day](screenshots/2.png)
+
+### Gameplay - Night Mode
+![Gameplay Night](screenshots/3.png)
+
+### Level Selection
+![Level Select](screenshots/4.png)
+
+### Battle Arena
+![Arena](screenshots/Arena.png)
+
+</div>
+
+---
+
+## 🚀 Installation
 
 ### Prerequisites
-- Node.js 18+ and npm
-- Modern web browser with Web Audio API support
+- **Java JDK 11+** - [Download from Adoptium](https://adoptium.net/)
+- **JavaFX SDK 11+** - [Download from Gluon](https://gluonhq.com/products/javafx/)
 
-### Local Development
+### Quick Start (Using JAR)
 
-```bash
-# Clone the repository
-git clone https://github.com/Flamechargerr/flora-fight-frenzy.git
+1. **Clone the repository**
+   ```bash
+   git clone https://github.com/Flamechargerr/flora-fight-frenzy.git
+   cd flora-fight-frenzy
+   ```
 
-# Navigate to project directory  
-cd flora-fight-frenzy
+2. **Download JavaFX SDK** from [Gluon](https://gluonhq.com/products/javafx/)
 
-# Install dependencies
-npm install
+3. **Run the game**
+   
+   **Windows:**
+   ```powershell
+   java --module-path "PATH_TO_JAVAFX\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media -jar jar/PlantVsZombies.jar
+   ```
+   
+   **Linux/Mac:**
+   ```bash
+   java --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media -jar jar/PlantVsZombies.jar
+   ```
 
-# Start development server
-npm run dev
+### Run from Source
 
-# Build for production
-npm run build
+1. **Open in your IDE** (IntelliJ IDEA, Eclipse, NetBeans)
+2. **Add JavaFX to your project libraries**
+3. **Set VM options:**
+   ```
+   --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media
+   ```
+4. **Run `Main.java`**
 
-# Preview production build
-npm run preview
-```
+---
 
-### 🎮 How to Play
+## 🎯 How to Play
 
-1. **Collect Sunlight**: Click on falling sun tokens to gather resources
-2. **Plant Defenders**: Select plants from the panel and place them strategically
-3. **Defend Your Garden**: Stop zombies from reaching the left side of your garden
-4. **Survive Waves**: Each level has multiple waves of increasing difficulty
-5. **Unlock Achievements**: Complete challenges to earn rewards and track progress
+### Objective
+Defend your house from waves of zombies by strategically placing plants!
 
-### 🌱 Plant Types
+### Controls
+| Action | How To |
+|--------|--------|
+| **Select Plant** | Click on plant card in sidebar |
+| **Place Plant** | Click on lawn grid |
+| **Collect Sun** | Click on falling/produced sun |
+| **Remove Plant** | Click shovel, then click plant |
+| **Open Menu** | Click "Menu" button |
+| **View Almanac** | Click book icon in main menu |
 
-| Plant | Cost | Ability | Damage |
-|-------|------|---------|--------|
-| 🌻 Sunflower | 50 | Generates sun resources | 0 |
-| 🌱 Peashooter | 100 | Basic projectile attacks | 20 |
-| 🥜 Wall Nut | 50 | High health tank | 0 |
-| ❄️ Ice Shooter | 175 | Slows down enemies | 10 |
-| 🔥 Fire Shooter | 200 | High damage attacks | 50 |
-| 🍒 Cherry Bomb | 150 | Area explosion damage | 100 |
-| 🌿 Repeater | 200 | Double shot attacks | 40 |
-| ☘️ Threepeater | 325 | Triple lane coverage | 20 |
-| 🌵 Spikeweed | 100 | Ground-based passive damage | 10 |
-| 🪵 Torchwood | 175 | Enhances nearby projectiles | 5 |
+### Strategy Tips
+1. 🌻 **Start with Sunflowers** - Plant 2-3 sunflowers first for economy
+2. 🌱 **Defense Line** - Place shooters in front rows
+3. 🥜 **Use Wall-nuts** - Block zombies while shooters attack
+4. 🍒 **Save Cherry Bombs** - Use for emergencies when overwhelmed
+5. 🌶️ **Jalapeno for rows** - Clear entire lane when needed
 
-## 🏆 Achievement Categories
-
-### ⚔️ Combat
-- First Blood, Zombie Slayer, Undead Hunter, Apocalypse Survivor
-
-### 🛡️ Defense  
-- Green Thumb, Gardener, Master Gardener, Botanical Fortress
-
-### 🎯 Survival
-- Last Stand, Perfect Defense, Marathon Survivor
-
-### ☀️ Collection
-- Sun Collector, Solar Powered
-
-### ⭐ Special
-- Speed Runner, High Scorer, Garden Legend
+---
 
 ## 📁 Project Structure
 
 ```
-src/
-├── components/          # React components
-│   ├── game/           # Game-specific components
-│   └── ui/             # Reusable UI components
-├── game/               # Game logic and systems
-│   ├── hooks/          # Custom React hooks
-│   ├── utils/          # Game utilities
-│   ├── constants.ts    # Game configuration
-│   └── types.ts        # TypeScript definitions
-├── lib/                # Core systems
-│   ├── soundManager.ts     # Audio system
-│   ├── particleSystem.ts   # Visual effects
-│   └── achievementManager.ts # Achievement system
-├── pages/              # Route pages
-└── hooks/              # Global React hooks
+flora-fight-frenzy/
+├── src/
+│   └── sample/
+│       ├── Main.java              # Application entry point
+│       ├── GamePlayController.java # Main game logic
+│       ├── Plant.java             # Base plant class
+│       ├── Zombie.java            # Base zombie class
+│       ├── Level.java             # Level management
+│       ├── Sunflower.java         # Sunflower plant
+│       ├── PeaShooter.java        # Pea shooter plant
+│       ├── Repeater.java          # Repeater plant
+│       ├── Wallnut.java           # Wall-nut plant
+│       ├── CherryBomb.java        # Cherry bomb plant
+│       ├── Jalapeno.java          # Jalapeno plant
+│       ├── NormalZombie.java      # Normal zombie
+│       ├── ConeZombie.java        # Conehead zombie
+│       ├── BucketZombie.java      # Buckethead zombie
+│       ├── Shovel.java            # Shovel tool
+│       ├── LawnMower.java         # Lawnmower defense
+│       ├── *.fxml                 # UI layouts
+│       └── assets/                # Images & sounds
+├── jar/
+│   ├── PlantVsZombies.jar         # Executable JAR
+│   ├── run_game.bat               # Windows launcher
+│   └── README.md                  # JAR instructions
+├── screenshots/                   # Game screenshots
+├── README.md                      # This file
+└── LICENSE                        # GPL v3 License
 ```
-
-## 🎵 Audio System
-
-The game features a custom Web Audio API implementation that generates:
-- **Procedural Sound Effects**: Shooting, planting, collection sounds
-- **Dynamic Audio**: Context-aware audio feedback
-- **No External Assets**: All audio generated in real-time
-- **Customizable Volume**: User-controlled audio settings
-
-## 🎨 Visual Effects
-
-Custom particle system providing:
-- **Explosion Effects**: Enemy defeats and plant abilities
-- **Collection Sparkles**: Sun resource pickup feedback
-- **Floating Text**: Score and damage indicators  
-- **Smoke Trails**: Projectile and impact effects
-- **60fps Performance**: Optimized rendering pipeline
-
-## 🚀 Deployment
-
-The game is automatically deployed to GitHub Pages using GitHub Actions:
-
-1. **Automatic Deployment**: Push to `main` branch triggers deployment
-2. **GitHub Pages**: Hosted at `https://flamechargerr.github.io/flora-fight-frenzy/`
-3. **Custom Domain**: Can be configured in repository settings
-
-### Manual Deployment
-
-```bash
-# Build for production
-npm run build
-
-# Deploy to GitHub Pages (if configured)
-npm run deploy
-```
-
-### Alternative Hosting
-
-- **Netlify**: Drag and drop `dist` folder
-- **Vercel**: Connect GitHub repository
-- **Firebase Hosting**: Use Firebase CLI
-
-## 🤝 Contributing
-
-We welcome contributions! Here's how you can help:
-
-### 🐛 Bug Reports
-- Use the GitHub Issues tab
-- Include browser version and OS
-- Provide steps to reproduce
-
-### 💡 Feature Requests
-- Suggest new plant types or abilities
-- Propose gameplay mechanics
-- Request quality of life improvements
-
-### 🔨 Development
-
-1. Fork the repository
-2. Create a feature branch: `git checkout -b feature/amazing-feature`
-3. Commit changes: `git commit -m 'Add amazing feature'`
-4. Push to branch: `git push origin feature/amazing-feature`
-5. Open a Pull Request
-
-### 🎨 Assets & Design
-- Create new plant or zombie sprites
-- Design additional UI components
-- Suggest visual improvements
-
-## 📜 License
-
-This project is licensed under the MIT License - see the [LICENSE](LICENSE) file for details.
-
-## 🙏 Acknowledgments
-
-- Inspired by the classic Plants vs. Zombies game
-- Built with modern web technologies
-- Sound effects generated using Web Audio API
-- UI components from shadcn/ui library
-
-## 📞 Support
-
-- **Issues**: [GitHub Issues](https://github.com/Flamechargerr/flora-fight-frenzy/issues)
-- **Discussions**: [GitHub Discussions](https://github.com/Flamechargerr/flora-fight-frenzy/discussions)
-- **Email**: Create an issue for direct contact
 
 ---
 
-**Enjoy defending your garden! 🌱⚔️🧟**
+## 🎨 Design Patterns Used
+
+1. **Singleton Pattern** - Database and Shovel classes
+2. **Iterator Pattern** - Synchronized access to Plants, Zombies, Lawnmowers
+3. **Facade Pattern** - Menu-based navigation system
+4. **Factory Pattern** - Zombie spawning based on level
+
+---
+
+## 🙏 Credits
+
+| Role | Name |
+|------|------|
+| **Developer** | [Anamay (Flamechargerr)](https://github.com/Flamechargerr) |
+| **Original Concept** | PopCap Games / EA |
+| **Original Java Implementation** | Bhavya Chopra & Sonali Singhal |
+| **Technology** | Java 17, JavaFX 17 |
+
+---
+
+## 📜 License
+
+This project is licensed under the **GNU General Public License v3.0** - see the [LICENSE](LICENSE) file for details.
+
+You are free to:
+- ✅ Use this code for educational purposes
+- ✅ Modify and distribute under the same license
+- ✅ Use for non-commercial purposes
+
+---
+
+## 🤝 Contributing
+
+Contributions are welcome! Feel free to:
+1. Fork the repository
+2. Create a feature branch
+3. Submit a pull request
+
+---
+
+<div align="center">
+
+### 🌻 Made with ❤️ by Anamay (Flamechargerr) 🧟
+
+[![GitHub](https://img.shields.io/badge/GitHub-Flamechargerr-black?logo=github)](https://github.com/Flamechargerr)
+
+**Defend your lawn. Defeat the zombies. Have fun!**
+
+</div>
